--- a/AppHytracked/app/src/main/res/values/strings.xml
+++ b/AppHytracked/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="activity_level">Activity Level</string>
     <string name="Sumbit">Submit</string>
     <string name="Name">Name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
